# hologram

cgv/base/: base.cxx
cgv/gui/: gui_creator.cxx
cgv/media/mesh/: simple_mesh.cxx
cgv/render/: drawable.cxx  texture.cxx
plugins/MultiViewRendering/: .gitignore  CMakeLists.txt  config.def  holo_view_interactor.cxx  holo_view_interactor.h  holo_view_interactor_baseline.cxx  holo_view_interactor_baseline.h  lib_begin.h  measurements.csv  measurements_new_compute.csv  measurements_no_holo.csv  measurements_no_holo_new.csv  measurements_with_holo.csv  measurements_with_holo_new.csv  measurements_working_set.csv  mesh.cxx  mesh.h  module.cxx  multi_view_rendering.pj  tessellator.cxx  tessellator.h  utilities.h
plugins/MultiViewRendering/glsl/: backwards.glfs  backwards.glpr  backwards.glvs  baseline.glfs  baseline.glpr  baseline.glvs  baseline_vol.glpr  baseline_vol.glvs  compute.glcs  compute.glpr  compute_resolve.glcs  compute_resolve.glpr  compute_resolve_geometry.glfs  compute_resolve_geometry.glgs  compute_resolve_geometry.glpr  compute_resolve_geometry.glvs  compute_resolve_quilt.glcs  compute_resolve_quilt.glpr  compute_resolve_volume.glcs  compute_resolve_volume.glpr  compute_warp.glcs  compute_warp.glpr  geometry.glgs  geometry.glpr  geometry.glvs  holes.glfs  holes.glpr  holes.glvs  quilt_finish.glpr  reprojection.glfs  reprojection.glpr  reprojection.glvs  screen.glfs  screen.glpr  test.glfs  test.glpr  test.glvs  vertex_warp.glfs  vertex_warp.glpr  vertex_warp.glvs  (+8 more)
plugins/crg_holo_view/: CMakeLists.txt
